--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,10 @@ body {
     border-bottom: 1px solid #e6e6e6;
 }
 .book-library .title {
-    font-weight: bold;
+/*     font-weight: bold; */
     margin: 0;
     text-align: left;
-    font-size: 18px;
+/*     font-size: 18px; */
 }
 .book-library .book .author {
     margin: 0;
